--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
   
     
-        <center><img src="images/microsoftlogo2.png"></center>
+        <center><img src="microsoftlogo2.png"></center>
    
 
     <section><center>Microsoft Corporation is an American multinational corporation 
